--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "antd": "^4.14.1",
     "date-fns": "^2.19.0",
     "next": "^10.0.0",
     "react": "17.0.1",
