--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "antd": "^4.14.1",
     "date-fns": "^2.19.0",
+    "framer-motion": "^4.0.3",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
